# SHA-256-Proof-of-Work-Simulator

./: CMakeLists.txt  LICENSE  sha256.cpp
src/: sha256.cpp
